CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
INCLUDE(${PROJECT_SOURCE_DIR}/mk/env.txt)

ADD_SUBDIRECTORY(addArray)

#AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_LIST)
#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
#add_executable(output ${SRC_LIST})

